--- a/root-config/azure-pipelines.yml
+++ b/root-config/azure-pipelines.yml
@@ -36,7 +36,7 @@ steps:
     workingDirectory: root-config
     scriptLocation: inlineScript
     inlineScript: |
+      az account show
       az storage blob upload-batch \
           --destination ${CONTAINER_NAME} \
-          --source dist --account-name ${ACCOUNT_NAME} \
-          --auth-mode login
+          --source dist --account-name ${ACCOUNT_NAME}
