--- a/root-config/package.json
+++ b/root-config/package.json
@@ -3,10 +3,9 @@
   "scripts": {
     "start": "webpack serve --port 9000 --env isLocal",
     "lint": "eslint src --ext js,ts,tsx",
-    "test": "cross-env BABEL_ENV=test jest --passWithNoTests",
+    "test": "jest --watch",
     "format": "prettier --write .",
     "check-format": "prettier --check .",
-    "prepare": "is-ci || husky install",
     "build": "webpack --mode=production"
   },
   "devDependencies": {
@@ -16,6 +15,14 @@
     "@babel/preset-env": "^7.14.7",
     "@babel/preset-typescript": "^7.14.5",
     "@babel/runtime": "^7.14.6",
+    "@swc/cli": "^0.1.46",
+    "@swc/core": "^1.2.77",
+    "@tsconfig/node16": "^1.0.2",
+    "@types/express": "^4.17.13",
+    "@types/jest": "^26.0.24",
+    "@types/supertest": "^2.0.11",
+    "@types/systemjs": "^6.1.0",
+    "@types/webpack-env": "^1.16.0",
     "concurrently": "^6.2.0",
     "cross-env": "^7.0.3",
     "eslint": "^7.29.0",
@@ -25,12 +32,15 @@
     "html-webpack-plugin": "^5.3.2",
     "husky": "^6.0.0",
     "is-ci": "^3.0.0",
-    "jest": "^27.0.5",
+    "jest": "^27.0.6",
     "jest-cli": "^27.0.5",
     "prettier": "^2.3.2",
     "pretty-quick": "^3.1.1",
     "serve": "^12.0.0",
+    "supertest": "^6.1.5",
     "ts-config-single-spa": "^2.0.1",
+    "ts-jest": "^27.0.4",
+    "ts-node": "^10.2.0",
     "typescript": "^4.3.4",
     "webpack": "^5.40.0",
     "webpack-cli": "^4.7.2",
@@ -39,10 +49,11 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
-    "@types/jest": "^26.0.23",
-    "@types/systemjs": "^6.1.0",
-    "@types/webpack-env": "^1.16.0",
+    "express": "^4.17.1",
     "single-spa": "^5.9.3",
     "single-spa-layout": "1.6.0"
+  },
+  "volta": {
+    "node": "16.6.2"
   }
 }
