--- a/root-config/tsconfig.json
+++ b/root-config/tsconfig.json
@@ -1,5 +1,13 @@
 {
-  "extends": "ts-config-single-spa",
-  "include": ["src/**/*", "node_modules/@types"],
-  "exclude": ["src/**/*.test*"]
+  "compilerOptions": {
+    "lib": ["es2021"],
+    "module": "commonjs",
+    "target": "es2021",
+    "strict": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "outDir": "dist"
+  },
+  "include": ["server/**/*", "browser"]
 }
