--- a/utils/mfes.yml
+++ b/utils/mfes.yml
@@ -1,3 +1,6 @@
+variables:
+  PNPM_CACHE_FOLDER: $(Pipeline.Workspace)/.pnpm-store
+
 parameters:
   - name: portal
     default: ""
@@ -13,6 +16,14 @@ steps:
       versionSpec: "14.x"
   - bash: curl -f https://get.pnpm.io/v6.14.js | node - add --global pnpm@6
     displayName: Install pnpm
+  - task: Cache@2
+    displayName: Cache Pnpm store
+    inputs:
+      key: '"pnpm" | "$(Agent.OS)" | ${{ parameters.appName }}/**/pnpm-lock.yaml'
+      restoreKeys: |
+         pnpm | "$(Agent.OS)"
+      path: $(PNPM_CACHE_FOLDER)
+    
   - script: pnpm i --frozen-lockfile
     workingDirectory: ${{ parameters.appName }}
     displayName: "packages install"
