--- a/ninjas/tsconfig.json
+++ b/ninjas/tsconfig.json
@@ -1,8 +1,10 @@
 {
   "extends": "ts-config-single-spa",
   "compilerOptions": {
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "declarationDir": "dist"
   },
-  "include": ["src/**/*", "node_modules/@types"],
+  "files": ["src/konoha-ninjas.tsx"],
+  "include": ["src/**/*"],
   "exclude": ["src/**/*.test*"]
 }
