--- a/root-config/.swcrc
+++ b/root-config/.swcrc
@@ -4,12 +4,15 @@
       "syntax": "typescript"
     },
     "transform": null,
-
     "target": "es2021",
     "loose": true,
     "externalHelpers": false
   },
   "module": {
     "type": "commonjs"
-  }
+  },
+  "exclude": [
+    ".test.ts$",
+    ".d.ts$"
+  ]
 }
